--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
             </li>
 
             <li class="header-nav-item">
-              <a class="header-nav-link link" href>Contacts</a>
+              <a class="header-nav-link link" href="./contacts.html">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -276,28 +276,52 @@
           <p class="footer-social-text">Social media</p>
           <ul class="footer-social-list">
             <li class="footer-social-list-item">
-              <a class="footer-social-list-link" href="#">
+              <a
+                class="footer-social-list-link"
+                href="https://www.instagram.com/"
+                aria-label="Instagram"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg class="footer-social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
-              <a class="footer-social-list-link" href="#">
+              <a
+                class="footer-social-list-link"
+                href="https://www.twitter.com/"
+                aria-label="Twitter"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg class="footer-social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
-              <a class="footer-social-list-link" href="#">
+              <a
+                class="footer-social-list-link"
+                href="https://www.facebook.com/"
+                aria-label="Facebook"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg class="footer-social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-list-item">
-              <a class="footer-social-list-link" href="#">
+              <a
+                class="footer-social-list-link"
+                href="https://www.linkedin.com/"
+                aria-label="Linkedin"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
                 <svg class="footer-social-list-icon" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
