--- a/index.html
+++ b/index.html
@@ -546,5 +546,17 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal" type="button">
+        <button class="modal-btn">
+          <svg class="" width="" height="">
+            <use href=""></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
