--- a/portfolio.html
+++ b/portfolio.html
@@ -118,6 +118,11 @@
             <li class="item">
               <a class="portfolio-list-link link" href="#">
                 <div class="card-thumb">
+                  <p class="card-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+
                   <img
                     src="./images/gallery/services/img-2.jpg"
                     alt="Cashless Payment"
