--- a/portfolio.html
+++ b/portfolio.html
@@ -100,6 +100,11 @@
             <li class="item">
               <a class="portfolio-list-link link" href="#">
                 <div class="card-thumb">
+                  <p class="card-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+
                   <img
                     src="./images/gallery/services/img-1.jpg"
                     alt="Banking App Interface Concept"
@@ -140,6 +145,11 @@
             <li class="item">
               <a class="portfolio-list-link link" href="#">
                 <div class="card-thumb">
+                  <p class="card-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+
                   <img
                     src="./images/gallery/services/img-3.jpg"
                     alt="Meditaion App"
@@ -157,6 +167,11 @@
             <li class="item">
               <a class="portfolio-list-link link" href="#">
                 <div class="card-thumb">
+                  <p class="card-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+
                   <img
                     src="./images/gallery/services/img-4.jpg"
                     alt="Taxi Service"
@@ -175,6 +190,11 @@
             <li class="item">
               <a class="portfolio-list-link link" href="#">
                 <div class="card-thumb">
+                  <p class="card-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+
                   <img
                     src="./images/gallery/services/img-5.jpg"
                     alt="Screen Illustrations"
@@ -193,6 +213,11 @@
             <li class="item">
               <a class="portfolio-list-link link" href="#">
                 <div class="card-thumb">
+                  <p class="card-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+
                   <img
                     src="./images/gallery/services/img-6.jpg"
                     alt="Online Courses"
@@ -210,6 +235,11 @@
             <li class="item">
               <a class="portfolio-list-link link" href="#">
                 <div class="card-thumb">
+                  <p class="card-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+
                   <img
                     src="./images/gallery/services/img-7.jpg"
                     alt="Instagram Stories Concept"
@@ -227,6 +257,11 @@
             <li class="item">
               <a class="portfolio-list-link link" href="#">
                 <div class="card-thumb">
+                  <p class="card-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+
                   <img
                     src="./images/gallery/services/img-8.jpg"
                     alt="Organic Food"
@@ -244,6 +279,11 @@
             <li class="item">
               <a class="portfolio-list-link link" href="#">
                 <div class="card-thumb">
+                  <p class="card-overlay-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie
+                    Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
+                  </p>
+
                   <img
                     src="./images/gallery/services/img-9.jpg"
                     alt="Fresh Coffee"
