--- a/index.html
+++ b/index.html
@@ -547,11 +547,11 @@
       </div>
     </footer>
 
-    <div class="backdrop" data-modal>
+    <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button class="modal-btn" data-modal-close type="button">
-          <svg class="modal-icon" width="24px" height="24px">
-            <use href="./images/icons.svg#icon-close"></use>
+          <svg class="modal-icon" width="8px" height="8px">
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
       </div>
