--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <section class="hero">
         <div class="container">
           <h1 class="hero-title centered">Effective Solutions for Your Business</h1>
-          <button class="btn btn-hero centered" type="button" data-modal-open>Order Service</button>
+          <button class="btn btn-hero centered" data-modal-open type="button">Order Service</button>
         </div>
       </section>
 
@@ -427,42 +427,42 @@
           <ul class="customers-list">
             <li class="customers-list-item">
               <a class="customers-list-link" href="#">
-                <svg class="customers-list-icon" width="104" height="56">
+                <svg class="customers-list-icon" width="168" height="88">
                   <use href="./images/icons.svg#icon-custumer-1"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers-list-link" href="#">
-                <svg class="customers-list-icon" width="104" height="56">
+                <svg class="customers-list-icon" width="168" height="88">
                   <use href="./images/icons.svg#icon-custumer-2"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers-list-link" href="#">
-                <svg class="customers-list-icon" width="104" height="56">
+                <svg class="customers-list-icon" width="168" height="88">
                   <use href="./images/icons.svg#icon-custumer-3"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers-list-link" href="#">
-                <svg class="customers-list-icon" width="104" height="56">
+                <svg class="customers-list-icon" width="168" height="88">
                   <use href="./images/icons.svg#icon-custumer-4"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers-list-link" href="#">
-                <svg class="customers-list-icon" width="104" height="56">
+                <svg class="customers-list-icon" width="168" height="88">
                   <use href="./images/icons.svg#icon-custumer-5"></use>
                 </svg>
               </a>
             </li>
             <li class="customers-list-item">
               <a class="customers-list-link" href="#">
-                <svg class="customers-list-icon" width="104" height="56">
+                <svg class="customers-list-icon" width="168" height="88">
                   <use href="./images/icons.svg#icon-custumer-6"></use>
                 </svg>
               </a>
